# For Qt
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)
set(CMAKE_AUTOUIC ON)

add_subdirectory(Base)
add_subdirectory(Lesson1)
add_subdirectory(Moseykov)

add_subdirectory(Kononov)
add_subdirectory(ostapchenko/task1)
add_subdirectory(Nikolaev)
add_subdirectory(devyatovskaya)
add_subdirectory(Popova/Task1)
add_subdirectory(Shabalov/Task-1)
add_subdirectory(Bazhenov)
add_subdirectory(sayfudinova/task1)