# For Qt
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)
set(CMAKE_AUTOUIC ON)

add_subdirectory(Base)
add_subdirectory(Lesson1)
add_subdirectory(Moseykov)

add_subdirectory(Kononov)
add_subdirectory(ostapchenko)
add_subdirectory(Nikolaev)
add_subdirectory(Popova)
add_subdirectory(devyatovskaya)
add_subdirectory(Shabalov)
add_subdirectory(Bazhenov)
add_subdirectory(sayfudinova)
add_subdirectory(Antonova)
add_subdirectory(Biryuchkov)
add_subdirectory(Bondarchuk)
